--- a/Server/package.json
+++ b/Server/package.json
@@ -9,6 +9,8 @@
         "express-validation": "^1.0.2",
         "joi": "^14.3.1",
         "jsonwebtoken": "^8.4.0",
-        "mssql": "^4.3.2"
+        "mssql": "^4.3.2",
+        "nodemailer": "^5.1.1",
+        "sendmail": "^1.4.1"
     }
 }
