--- a/Server/config.json
+++ b/Server/config.json
@@ -1,5 +1,5 @@
 {
-    "baseUrl": "http://localhost",
+    "baseUrl": "http://localhost:8080",
     "CertGenerationUrl" : "/certifcates",
     "EmailValidationUrl":"/validate",
     "RestPasswordUrl":"/resetpassword",
